# PCL

PCL_Examples/: CMakeLists.txt
PCL_Examples/src/day01/: 01-pcl_demo.cpp  02-cloud_viewer.cpp  03-pcl_visualizer.cpp  04-pcl_transform.cpp  05-load_pcd.cpp  06-save_pcd.cpp  07-kd_tree.cpp  08-oc_tree.cpp  CMakeLists.txt
PCL_Examples/src/day02/: 01-pass_through.cpp  02-downsample_voxel_grid.cpp  03-statistical_removal.cpp  04-remove_outliers.cpp  05-range_image.cpp  06-range_image_border.cpp  07-narf_keypoint_extraction.cpp  08-random_sample_consensus.cpp  CMakeLists.txt
PCL_Examples/src/day03/: 01_normal_estimation.cpp  02_normal_estimation.cpp  03_normal_estimation.cpp  04-integral_image_normal.cpp  05-pfh_estimation.cpp  CMakeLists.txt
PCL_Examples/src/day04/: 01-iterative_closest_point.cpp  02-interactive_icp.cpp  CMakeLists.txt
PCL_Examples/src/day05/: 01-normal_distributions_transform.cpp  CMakeLists.txt
PCL_Examples/src/day06/: 01-incrementtally_register.cpp  02-alignment_prerejective.cpp  03-planar_segmentation.cpp  04-cylinder_segmentation.cpp  05-cluster_extraction.cpp  06-resampling.cpp  07-moment_of_inertia.cpp  CMakeLists.txt
